Attempt to fix z-index (Safari Bug) (1)

--- a/client/src/styles/components/auth/_SignIn.scss
+++ b/client/src/styles/components/auth/_SignIn.scss
@@ -52,10 +52,10 @@
   }
 
   &__placeholder {
+    @include transform(translate3d(0, 0, 0));
+
     &:before {
       color: $placeholder-font-color;
-
-      transform-style: preserve-3d;
 
       @extend %placeholder-text-no-icon;
     }
